terraform/modules/app/main.tf
resource "google_compute_instance" "app" {
  name = "reddit-app"
  machine_type = "g1-small"
  tags = ["reddit-app"]
  zone = "europe-north1-a"
  boot_disk {
    initialize_params {
      image = "${var.app_disk_image}"
    }
  }

  network_interface {
    network = "default"
    access_config {
      nat_ip = "${google_compute_address.app_ip.address}"
    }
  }

 depends_on = [
   "google_compute_address.app_ip" 
  ]
}

resource "google_compute_address" "app_ip" {
  name = "reddit-app-ip"
}

resource "google_compute_firewall" "firewall_puma" {
  name = "allow-puma-default"
  network = "default"
  allow {
    protocol = "tcp"
    ports = ["9292"]
  }
  source_ranges = ["0.0.0.0"]
  target_tags = ["reddit-app"]
}





/*
resource "google_compute_firewall" "firewall_ssh" {
  name = "default-allow-ssh"
  network = "default"
  allow {
    protocol = "tcp"
    ports = ["22"]
  }
  source_ranges = ["0.0.0.0"]
}
*/
